@@ -12,15 +12,14 @@
 	$(document).ready(function() {
 		$('#calendar').fullCalendar({
 		
-			/*
-			year: 2010,
-			month: 0,
-			date: 0,
+			//year: 2010,
+			//month: 0,
+			//date: 1,
 			
-			defaultView: 'basicDay',
+			//defaultView: 'basicDay',
 			
-			aspectRatio: 1,
-			*/
+			//aspectRatio: 1,
+			
 			
 			header: {
 				left: 'title',
