@@ -16,19 +16,28 @@
 			theme: true,
 			editable: true,
 			
-			//isRTL: true,
-			
 			header: {
-				left: 'prev,next today',
+				left: 'prevYear,prev,next,nextYear today',
 				center: 'title',
 				right: 'month,agendaWeek,basicWeek,agendaDay,basicDay'
 			},
 			
+			/*
 			buttonIcons: {
 				prev: 'triangle-1-w',
 				next: 'triangle-1-e',
 				today: 'home'
 			},
+			*/
+			
+			/*
+			isRTL: true,
+			header: {
+				left: 'nextYear,next,prev,prevYear today',
+				center: 'title',
+				right: 'month,agendaWeek,basicWeek,agendaDay,basicDay'
+			},
+			*/
 			
 			events: [
 				{
