@@ -1,6 +1,6 @@
 
 version 1.4 (10/19/09)
-	- agendaWeek and agendaDay views !!!
+	- agendaWeek and agendaDay views
 	- added some options for agenda views:
 		- allDaySlot
 		- allDayText
@@ -16,6 +16,7 @@ version 1.4 (10/19/09)
 	- added 'prevYear' and 'nextYear' for buttons in header
 	- minor change for theme users, ui-state-hover not applied to active/inactive buttons
 	- added event-color-changing example in docs
+	- better defaults for right-to-left themed button icons
 
 version 1.3.2 (10/13/09)
 	- Bugfixes (please upgrade from 1.3.1!)
